@@ -1,11 +1,11 @@
 package com.project.back_end.services;
 
-import com.project_back_end.models.Appointment;
-import com.project_back_end.models.Doctor;
-import com.project_back_end.models.Patient;
-import com.project_back_end.repo.AppointmentRepository;
-import com.project_back_end.repo.DoctorRepository;
-import com.project_back_end.repo.PatientRepository;
+import com.project.back_end.models.Appointment;
+import com.project.back_end.models.Doctor;
+import com.project.back_end.models.Patient;
+import com.project.back_end.repo.AppointmentRepository;
+import com.project.back_end.repo.DoctorRepository;
+import com.project.back_end.repo.PatientRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -22,13 +22,14 @@ public class AppointmentService {
     private final PatientRepository patientRepository;
     private final DoctorRepository doctorRepository;
     private final TokenService tokenService;
-    private final Service sharedService; // THIS IS YOUR custom Service class
+    // explicitly refer to your custom Service class to avoid confusion with the annotation
+    private final com.project.back_end.services.Service sharedService;
 
     public AppointmentService(AppointmentRepository appointmentRepository,
                               PatientRepository patientRepository,
                               DoctorRepository doctorRepository,
                               TokenService tokenService,
-                              Service sharedService) {
+                              com.project.back_end.services.Service sharedService) {
         this.appointmentRepository = appointmentRepository;
         this.patientRepository = patientRepository;
         this.doctorRepository = doctorRepository;
@@ -36,118 +37,162 @@ public class AppointmentService {
         this.sharedService = sharedService;
     }
 
-    // Book a new appointment
+    /**
+     * Book a new appointment.
+     * Returns 1 on success, 0 on failure.
+     */
     @Transactional
     public int bookAppointment(Appointment appointment) {
         try {
             appointmentRepository.save(appointment);
             return 1;
-        } catch (Exception e) {
+        } catch (Exception ex) {
+            ex.printStackTrace();
             return 0;
         }
     }
 
-    // Update an existing appointment
+    /**
+     * Update an existing appointment.
+     * Uses sharedService.validateAppointment(appointment) to check:
+     *  - -1 → invalid doctor / bad details
+     *  -  0 → doctor not available at that time
+     *  -  1 → OK
+     */
     @Transactional
-    public ResponseEntity<Map<String,String>> updateAppointment(Appointment appointment) {
-        Map<String,String> res = new HashMap<>();
+    public ResponseEntity<Map<String, String>> updateAppointment(Appointment appointment) {
+        Map<String, String> response = new HashMap<>();
 
         if (appointment.getId() == null) {
-            res.put("message", "Appointment ID is required.");
-            return ResponseEntity.badRequest().body(res);
+            response.put("message", "Appointment ID is required for update.");
+            return ResponseEntity.badRequest().body(response);
         }
 
-        if (!appointmentRepository.existsById(appointment.getId())) {
-            res.put("message", "Appointment not found.");
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(res);
+        Optional<Appointment> existingOpt = appointmentRepository.findById(appointment.getId());
+        if (existingOpt.isEmpty()) {
+            response.put("message", "Appointment not found.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
         }
 
-        int validation = sharedService.validateAppointment(appointment);
-        if (validation == -1) {
-            res.put("message", "Doctor not found or invalid details.");
-            return ResponseEntity.badRequest().body(res);
+        int validationCode = sharedService.validateAppointment(appointment);
+        if (validationCode == -1) {
+            response.put("message", "Doctor not found or invalid appointment details.");
+            return ResponseEntity.badRequest().body(response);
         }
-        if (validation == 0) {
-            res.put("message", "Doctor not available at selected time.");
-            return ResponseEntity.badRequest().body(res);
+        if (validationCode == 0) {
+            response.put("message", "Doctor is not available at the selected time.");
+            return ResponseEntity.badRequest().body(response);
         }
 
-        appointmentRepository.save(appointment);
-        res.put("message", "Appointment updated.");
-        return ResponseEntity.ok(res);
+        try {
+            appointmentRepository.save(appointment);
+            response.put("message", "Appointment updated successfully.");
+            return ResponseEntity.ok(response);
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            response.put("message", "Error updating appointment.");
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
+        }
     }
 
-    // Cancel an appointment
+    /**
+     * Cancel an appointment.
+     * Only the patient who owns the appointment (from token) can cancel.
+     */
     @Transactional
-    public ResponseEntity<Map<String,String>> cancelAppointment(long id, String token) {
-        Map<String,String> res = new HashMap<>();
+    public ResponseEntity<Map<String, String>> cancelAppointment(long id, String token) {
+        Map<String, String> response = new HashMap<>();
 
-        Optional<Appointment> opt = appointmentRepository.findById(id);
-        if (opt.isEmpty()) {
-            res.put("message", "Appointment not found.");
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(res);
+        Optional<Appointment> existingOpt = appointmentRepository.findById(id);
+        if (existingOpt.isEmpty()) {
+            response.put("message", "Appointment not found.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
         }
 
-        Appointment appointment = opt.get();
-        Long patientIdFromToken = tokenService.getPatientIdFromToken(token);
+        Appointment appointment = existingOpt.get();
 
-        if (appointment.getPatient() == null ||
-            !Objects.equals(appointment.getPatient().getId(), patientIdFromToken)) {
-            res.put("message", "Unauthorized to cancel.");
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(res);
+        Long tokenPatientId = tokenService.getPatientIdFromToken(token);
+        Patient appointmentPatient = appointment.getPatient();
+
+        if (appointmentPatient == null || !Objects.equals(appointmentPatient.getId(), tokenPatientId)) {
+            response.put("message", "You are not authorized to cancel this appointment.");
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(response);
         }
 
-        appointmentRepository.delete(appointment);
-        res.put("message", "Appointment cancelled.");
-        return ResponseEntity.ok(res);
+        try {
+            appointmentRepository.delete(appointment);
+            response.put("message", "Appointment cancelled successfully.");
+            return ResponseEntity.ok(response);
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            response.put("message", "Error cancelling appointment.");
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
+        }
     }
 
-    // Get appointments for doctor
+    /**
+     * Get appointments for a doctor (from token) on a given date,
+     * optionally filtered by patient name.
+     */
     @Transactional
-    public Map<String,Object> getAppointment(String pname, LocalDate date, String token) {
-        Map<String,Object> res = new HashMap<>();
+    public Map<String, Object> getAppointment(String pname, LocalDate date, String token) {
+        Map<String, Object> result = new HashMap<>();
 
         Long doctorId = tokenService.getDoctorIdFromToken(token);
-        Optional<Doctor> doc = doctorRepository.findById(doctorId);
-
-        if (doc.isEmpty()) {
-            res.put("message", "Invalid doctor token.");
-            res.put("appointments", Collections.emptyList());
-            return res;
+        Optional<Doctor> doctorOpt = doctorRepository.findById(doctorId);
+        if (doctorOpt.isEmpty()) {
+            result.put("appointments", Collections.emptyList());
+            result.put("message", "Invalid doctor token.");
+            return result;
         }
 
-        LocalDateTime start = date.atStartOfDay();
-        LocalDateTime end = date.plusDays(1).atStartOfDay();
+        LocalDateTime startOfDay = date.atStartOfDay();
+        LocalDateTime startOfNextDay = date.plusDays(1).atStartOfDay();
 
-        List<Appointment> list;
+        List<Appointment> appointments;
 
-        if (pname != null && !pname.equalsIgnoreCase("null") && !pname.isBlank()) {
-            list = appointmentRepository.findByDoctorIdAndPatient_NameContainingIgnoreCaseAndAppointmentTimeBetween(
-                    doctorId, pname.trim(), start, end
-            );
+        if (pname != null && !pname.trim().isEmpty() && !"null".equalsIgnoreCase(pname.trim())) {
+            appointments = appointmentRepository
+                    .findByDoctorIdAndPatient_NameContainingIgnoreCaseAndAppointmentTimeBetween(
+                            doctorId,
+                            pname.trim(),
+                            startOfDay,
+                            startOfNextDay
+                    );
         } else {
-            list = appointmentRepository.findByDoctorIdAndAppointmentTimeBetween(
-                    doctorId, start, end
-            );
+            appointments = appointmentRepository
+                    .findByDoctorIdAndAppointmentTimeBetween(
+                            doctorId,
+                            startOfDay,
+                            startOfNextDay
+                    );
         }
 
-        res.put("appointments", list);
-        return res;
+        result.put("appointments", appointments);
+        return result;
     }
 
-    // Update appointment status
+    /**
+     * Change the status of an appointment.
+     */
     @Transactional
-    public ResponseEntity<Map<String,String>> changeStatus(long id, int status) {
-        Map<String,String> res = new HashMap<>();
+    public ResponseEntity<Map<String, String>> changeStatus(long id, int status) {
+        Map<String, String> response = new HashMap<>();
 
-        if (!appointmentRepository.existsById(id)) {
-            res.put("message", "Appointment not found.");
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(res);
+        Optional<Appointment> existingOpt = appointmentRepository.findById(id);
+        if (existingOpt.isEmpty()) {
+            response.put("message", "Appointment not found.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
         }
 
-        appointmentRepository.updateStatus(status, id);
-
-        res.put("message", "Status updated.");
-        return ResponseEntity.ok(res);
+        try {
+            appointmentRepository.updateStatus(status, id);
+            response.put("message", "Appointment status updated successfully.");
+            return ResponseEntity.ok(response);
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            response.put("message", "Error updating appointment status.");
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
+        }
     }
 }
